# Android-Attack

./: .cursorignore  .gitignore  AGENT.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  Games.cpp  Games.hpp  Menu.cpp  Menu.hpp  NativeLib.cpp  app_menu.cpp  app_menu.hpp  exports.map  native-lib.cpp
app/src/main/cpp/LienQuan/: AGENT.md  LienQuan.cpp
app/src/main/cpp/LienQuan/Config/: Config.cpp  Config.h
app/src/main/cpp/LienQuan/Data/HeroIcon/: HeroIcon.h  README.md  dump_hero_icons.py
app/src/main/cpp/LienQuan/Hook/: EspHelper.cpp  EspHelper.h  EspIconView.cpp  EspIconView.h  EspRuntime.cpp  EspRuntime.h  Hook.cpp  Hook.h  MapBright.cpp  MapBright.h  SkinUnlock.cpp  SkinUnlock.h
app/src/main/cpp/LienQuan/Hook/Bypass/: AntiCheat.cpp  AntiCheat.h  anogs_bypass.hpp  il2cpp_bypass.hpp
app/src/main/cpp/LienQuan/Hook/SDK/: ActorManager.cpp  ActorManager.h  CBattleSystem.cpp  CBattleSystem.h  CLobbySystem.cpp  CLobbySystem.h  KyriosActorManager.cpp  KyriosActorManager.h  KyriosFramework.cpp  KyriosFramework.h  LActorRoot.cpp  LActorRoot.h  LBattleLogic.cpp  LBattleLogic.h  LFramework.cpp  LFramework.h  LGameActorMgr.cpp  LGameActorMgr.h  LLogicCore.cpp  LLogicCore.h  MiniMapSysUT.cpp  MiniMapSysUT.h  MinimapSys.cpp  MinimapSys.h
app/src/main/cpp/LienQuan/UI/Tab/: Chinh.cpp  Chinh.h  Esp.cpp  Esp.h
app/src/main/cpp/PlayTogether/: AGENT.md  AutoFishing.cpp  AutoFishing.h  FishLogger.cpp  FishLogger.h  FishingCatalog.cpp  FishingCatalog.h  FishingGameplay.cpp  FishingGameplay.h  KhoiPhucTrangThai.cpp  KhoiPhucTrangThai.h  PlayLog.h  PlayTogether.cpp  RollCongCu.cpp  RollCongCu.h
app/src/main/cpp/PlayTogether/Config/: Config.cpp  Config.h  PLConfig.h  PLConfigJson.cpp
app/src/main/cpp/PlayTogether/HOOK_PLAY/: AntiCheat.cpp  HOOK_PLAY.cpp  HOOK_PLAY.h
app/src/main/cpp/PlayTogether/Hook/: AntiCheat.cpp  AntiCheat.h  Hook.cpp  Hook.h
app/src/main/cpp/PlayTogether/SDK/: ActorCatchUpOther.cpp  ActorCatchUpOther.h  ActorCatchUpPlayer.cpp  ActorCatchUpPlayer.h  ActorControl.cpp  ActorControl.h  ActorDefaultControlPlayer.cpp  ActorDefaultControlPlayer.h  ActorTreasureHuntPlayer.cpp  ActorTreasureHuntPlayer.h  AutoCatchSystem.cpp  AutoCatchSystem.h  CacheSystem.cpp  CacheSystem.h  CacheUser.cpp  CacheUser.h  CollectSystem.cpp  CollectSystem.h  DialogActionButtons.cpp  DialogActionButtons.h  DialogFishingGetItem.cpp  DialogFishingGetItem.h  DialogJoyStick.cpp  DialogJoyStick.h  DialogResultGetItemView.cpp  DialogResultGetItemView.h  DialogShopInGame.cpp  DialogShopInGame.h  DialogUnit.cpp  DialogUnit.h  EquipmentSystem.cpp  EquipmentSystem.h  EventPickUpItemManager.cpp  EventPickUpItemManager.h  FarmLandHooks.cpp  FarmLandHooks.h  FarmLandProbe.cpp  FarmLandProbe.h  FarmSystem.cpp  FarmSystem.h  (+44 more)
app/src/main/cpp/PlayTogether/SharedPrefs/: SharedPrefs.cpp
app/src/main/cpp/PlayTogether/Stubs/: AutoCollect.cpp  AutoCollect.h  AutoFarm.cpp  AutoFarm.h  AutoInsect.cpp  AutoInsect.h  AutoMonster.cpp  AutoMonster.h  AutoTreasure.cpp  AutoTreasure.h  ESPManager.h
app/src/main/cpp/PlayTogether/UI/: DrawRender.cpp  DrawRender.h  EspGUI.h  GameViewport.h  InfoWindow.cpp  InfoWindow.h  MenuUi.cpp  MenuUi.h  OverlaySnapshot.cpp  OverlaySnapshot.h
app/src/main/cpp/PlayTogether/base64/: base64.cpp
loader/src/main/cpp/: CMakeLists.txt  HideTools.h  Loader.cpp  exports.map  loader.cpp  loader_entry.cpp  native_loader.cpp  native_loader.hpp
loader/src/main/cpp/Zygisk/: zygisk.cpp  zygisk.hpp
mod-ui/src/main/cpp/: CMakeLists.txt  DrawRender.cpp  Font.cpp  Icon.cpp  Keyboard.cpp  Layout.cpp  ModUi.cpp  Render.cpp  Shell.cpp  SurfaceBridge.cpp  Theme.cpp  Touch.cpp  mod_ui.cpp  mod_ui_android_keys.cpp  mod_ui_font.cpp  mod_ui_icon.cpp  mod_ui_keyboard.cpp  mod_ui_layout.cpp  mod_ui_render.cpp  mod_ui_shell.cpp  mod_ui_theme.cpp  mod_ui_touch.cpp  surface_bridge.cpp
mod-ui/src/main/cpp/include/: Icon.hpp  Internal.hpp  Layout.hpp  ModUi.hpp  mod_ui.hpp  mod_ui_icon.hpp  mod_ui_internal.hpp  mod_ui_layout.hpp  mod_ui_theme.hpp
native-core/src/main/cpp/: CMakeLists.txt  includes_link.cpp
native-core/src/main/cpp/API/: Color.h  IL2CPP_API.hpp  Il2CppApi.cpp  Il2CppApi.h  Il2cpp_Struct.h  Il2cpp_Symbol.h  Logger.h  Quaternion.h  Vector2.h  Vector2Int.h  Vector3.h  Vector3Int.h  Vector4.h
native-core/src/main/cpp/API/detail/: arm32_decode.hpp  arm64_decode.hpp  common.hpp  dynsym_resolve.hpp  elf_view.hpp  proc_maps.hpp  safe_read.hpp  scanner_arm32.hpp  scanner_arm64.hpp  xdl_resolve.hpp
native-core/src/main/cpp/API/game/: Keyboard.cpp  Keyboard.h
native-core/src/main/cpp/ActivityTracker/: ActivityTracker.cpp  ActivityTracker.hpp
native-core/src/main/cpp/And64Hook/: And64Hook.cpp  And64Hook.hpp
native-core/src/main/cpp/AntiLibPatch/: AntiLibPatch.cpp  AntiLibPatch.h  ElfImg.cpp  ElfImg.h  constants.h
native-core/src/main/cpp/Base64/: base64.cpp
native-core/src/main/cpp/DexLoader/: DexLoader.cpp  DexLoader.hpp  JniReflect.cpp  JniReflect.hpp
native-core/src/main/cpp/FileManager/: FileManager.cpp  FileManager.hpp
native-core/src/main/cpp/GameUI/: EspGUI.cpp  EspGUI.h  GameViewport.cpp
native-core/src/main/cpp/HttpClient/: HttpClient.cpp  HttpClient.hpp
native-core/src/main/cpp/Includes/: APKKiller.h  Logger.h  LoggerFile.cpp  LoggerFile.h  obfuscate.h
native-core/src/main/cpp/JNIHelper/: JNIHelper.cpp  JNIHelper.hpp
native-core/src/main/cpp/SharedPrefs/: SharedPrefs.cpp  SharedPrefs.h
native-core/src/main/cpp/Tools/: Tools.cpp  Tools.h
native-core/src/main/cpp/apksig/: apk_verifier.cpp  apksig.hpp  certificate_extractor.cpp  signing_block_locator.cpp  signing_block_parser.cpp  v2_v3_parser.cpp
native-core/src/main/cpp/cmake/: PrefabStatic.cmake
native-core/src/main/cpp/curl/: README.md  curl_link.cpp
native-core/src/main/cpp/dobby/: dobby_link.cpp
native-core/src/main/cpp/imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
native-core/src/main/cpp/json/: json.hpp
native-core/src/main/cpp/kittymemory/: KittyMemory.cpp
native-core/src/main/cpp/xhook/: xh_log.h
(+179 files in other folders)
